--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   geolocator: ^13.0.4
   flutter_map_location_marker: ^10.0.0
   geocoding: ^3.0.0
+  http: ^1.2.0
 
 dev_dependencies:
   flutter_test:
