--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,13 +33,16 @@ dependencies:
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^1.0.8
-  flutter_map: ^8.1.1
+  flutter_map: ^7.0.2
+  flutter_map_location_marker: ^9.1.1
   latlong2: ^0.9.0
-  geolocator: ^13.0.4
-  flutter_map_location_marker: ^10.0.0
-  geocoding: ^3.0.0
   http: ^1.2.0
+  location: ^7.0.1
+  flutter_polyline_points: ^2.1.0
+
+  geolocator: ^13.0.2
+  geolocator_web: ^4.1.3
+  permission_handler: ^12.0.1
 
 dev_dependencies:
   flutter_test:
