--- a/.env
+++ b/.env
@@ -1,4 +1,5 @@
-DB_HOST=localhost
+DB_HOST=switchyard.proxy.rlwy.net
+DB_PORT=43301
 DB_USER=root
-DB_PASS=Sh1nich!
-DB_NAME=iskort
+DB_PASS=nkAzvuvCsuhTymYgnMhwCTsqYqHlUBHX
+DB_NAME=railway
