--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "dotenv": "^16.5.0",
     "express": "^4.18.2",
     "multer": "^2.0.2",
-    "mysql2": "^3.14.1"
+    "mysql2": "^3.14.1",
+    "nodemailer": "^7.0.10",
+    "twilio": "^5.10.5"
   }
 }
