Test: Nodemailer for email verification

--- a/.env
+++ b/.env
@@ -3,3 +3,5 @@ DB_PORT=43301
 DB_USER=root
 DB_PASS=nkAzvuvCsuhTymYgnMhwCTsqYqHlUBHX
 DB_NAME=railway
+EMAIL_USER=asadonis1@up.edu.ph
+EMAIL_PASS=ghyrijldbhnnxbti
