--- a/package.json
+++ b/package.json
@@ -14,13 +14,13 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@sendgrid/mail": "^8.1.6",
     "body-parser": "^2.2.0",
     "cors": "^2.8.5",
     "dotenv": "^16.5.0",
     "express": "^4.18.2",
     "multer": "^2.0.2",
     "mysql2": "^3.14.1",
-    "nodemailer": "^7.0.10",
     "twilio": "^5.10.5"
   }
 }
