--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,10 +47,20 @@ dependencies:
   image_picker: ^1.2.0
   file_picker: ^10.3.3
   shared_preferences: ^2.3.2
+  
+  intl: ^0.18.1
+
 
 dev_dependencies:
+  flutter_launcher_icons: ^0.12.0
   flutter_test:
     sdk: flutter
+
+flutter_icons:
+  android: true
+  ios: true
+  image_path: "assets/icon.png"
+    
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
