--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,26 +35,31 @@ dependencies:
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
-  flutter_map: ^7.0.2
-  flutter_map_location_marker: ^9.1.1
+  flutter_map: ^8.2.2
+  flutter_map_location_marker: ^10.1.0
   latlong2: ^0.9.0
   http: ^1.2.0
-  location: ^7.0.1
+  location: ^8.0.1
   flutter_polyline_points: ^2.1.0
-  geolocator: ^13.0.2
+  geolocator: ^14.0.2
   geolocator_web: ^4.1.3
   permission_handler: ^12.0.1
   image_picker: ^1.2.0
   file_picker: ^10.3.3
   shared_preferences: ^2.3.2
+  cached_network_image: ^3.2.3
+  flutter_cache_manager: ^3.4.1
   
-  intl: ^0.18.1
+  intl: ^0.20.2
 
 
 dev_dependencies:
-  flutter_launcher_icons: ^0.12.0
+  flutter_launcher_icons: ^0.14.4
   flutter_test:
     sdk: flutter
+  mockito: ^5.6.1
+  build_runner: ^2.10.4
+  
 
 flutter_icons:
   android: true
